hard-gists/4587049/run.log
=== Docker Run Log for 4587049 ===
Started at: Mi 29. Okt 14:44:57 CET 2025

[2025-10-29 14:44:58] START: Running container for 4587049
[2025-10-29 14:44:58] SUCCESS: Container 8ab9ca17efca7d0290744c12d877ab4f5468b3f75896064fae81210376b58715 started for 4587049
=== Container logs for 4587049 ===
  File "/snippet.py", line 11
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 4587049 ===
[2025-10-29 14:45:00] INFO: Container 8ab9ca17efca7d0290744c12d877ab4f5468b3f75896064fae81210376b58715 has stopped
